# greenturtle

./: .gitignore  AUTHORS  Makefile  README.md  TODO.md  requirements.txt  setup.cfg  setup.py
deploy/: greenturtle.service
doc/: design.md  install.md
download/: README.md  align.py  download.py
download/crypto/: README.md  process.py
download/future/: README.md  align.py  download.py  generate_continuous.py  generate_contract.py
download/future_cn/: REAMDME.md  download.py
download/future_us/: concat_adjust_csi_data.py  download.py  download_main.py  process_adjust.py
download/stock_cn/: download.py
e2e/: test_basic_future_backtrader.py  test_basic_stock_backtrader.py  test_data_backtrader.py
etc/greenturtle/: greenturtle.yaml
experiments/: broker.py  kline.py  multi_values.py  overview.py  single.py
experiments/crypto/: common.py  macd.py  mim.py  rsi.py  rsrs.py  single.py
experiments/future/: common.py  multi_values.py  overview.py  single.py
experiments/stock/: common.py  etf_cn.py  etf_us.py  index_etf_overview_cn.py  index_etf_overview_us.py  overview.py  single.py  stock_bond.py
greenturtle/: exception.py
greenturtle/analyzers/: correlation.py  position_pnl.py  summary.py
greenturtle/backtesting/: backtesting.py
greenturtle/brokers/: backbroker.py  tqbroker.py
greenturtle/cmd/: greenturtle.py  serve.py  sync_db.py
greenturtle/constants/: __init__.py  future.py  types.py  varieties.py
greenturtle/data/: transform.py  validation.py
greenturtle/db/: api.py  models.py  utils.py
greenturtle/indicators/: rsrs.py
(+87 files in other folders)
