[metadata]
name = greenturtle
version = v0.0.1
summary = greenturtle for CTA
author = DeliangFan
author_email = vanderliang@gmail.com
home_page = https://github.com/DeliangFan
classifier =
    Environment :: Greenturtle
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.0

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages =
    greenturtle

[entry_points]
console_scripts =
    greenturtle-serve = greenturtle.cmd.serve:main
    greenturtle-sync-db = greenturtle.cmd.sync_db:main
